--- a/src/surplus/ViewMed.form
+++ b/src/surplus/ViewMed.form
@@ -75,27 +75,11 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="3">
-                <Column editable="true" title="NAME" type="java.lang.Object">
-                  <Data value="Dolo"/>
-                  <Data value="Para"/>
-                  <Data value="null"/>
-                </Column>
-                <Column editable="true" title="COMPANY ID" type="java.lang.Object">
-                  <Data value="123"/>
-                  <Data value="895"/>
-                  <Data value="null"/>
-                </Column>
-                <Column editable="true" title="QUANTITY" type="java.lang.Object">
-                  <Data value="5"/>
-                  <Data value="4"/>
-                  <Data value="null"/>
-                </Column>
-                <Column editable="true" title="PRICE" type="java.lang.Object">
-                  <Data value="10"/>
-                  <Data value="15"/>
-                  <Data value="null"/>
-                </Column>
+              <Table columnCount="4" rowCount="0">
+                <Column editable="true" title="NAME" type="java.lang.Object"/>
+                <Column editable="true" title="COMPANY ID" type="java.lang.Object"/>
+                <Column editable="true" title="QUANTITY" type="java.lang.Object"/>
+                <Column editable="true" title="PRICE" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
